# subreddit-trends

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: github-actions-ci.yml
scripts/: test.py
src/subreddit_trends/: exceptions.py  main.py  reddit_scraper.py  storage_backends.py
src/subreddit_trends/cli/: __init__.py  main.py  options.py  test.py  utilities.py
src/subreddit_trends/storage/: storage_backends.py
