[project]
name = "subreddit-trends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "isort>=6.0.1",
    "minio>=7.2.16",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "praw>=7.8.1",
    "pre-commit>=4.2.0",
    "pyarrow>=21.0.0",
    "ruff>=0.12.4",
    "typer>=0.16.0",
]

[project.scripts]
subreddit-trends = "subreddit_trends.cli:main"
subreddit-trends-app = "subreddit_trends.cli.main:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subreddit_trends"]
